@@ -2,7 +2,7 @@
 <project name="Venice" default="run" basedir=".">
 
   <!-- Current version we are working towards -->
-  <property name="VERSION" value="0.73beta"/>
+  <property name="VERSION" value="0.731beta"/>
 
   <!-- Paths -->
   <property name="api" value="${basedir}/api"/>
@@ -29,8 +29,10 @@
   <property name="lib.jython" value="${lib}/jython.jar"/>
   <property name="lib.mysql" value="${lib}/mysql-connector-java-3.1.12-bin.jar"/>
   <property name="lib.xml" value="${lib}/xstream-1.3.jar"/>
-  
+  <property name='lib.junit' value='${lib}/junit.jar'/>
   <property name='lib.uuid' value="${lib}/jug-lgpl-2.0.0.jar"/>
+
+
 
   <!-- Online help -->
   <property name="help" value="${classes}/nz/org/venice/help/doc"/>
@@ -507,6 +509,7 @@
         <pathelement path="${java.class.path}"/>
         <pathelement path="${classes}"/>
         <pathelement path="${test}"/>
+	<pathelement path="${lib.junit}"/>
         <pathelement path="${lib.hsql}"/>
         <pathelement path="${lib.joone}"/>
         <pathelement path="${lib.mysql}"/>
